--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="description" content="Hazem Khaled - Code Architect and Full-Stack Developer Portfolio" />
     <title>Hazem Khaled - Portfolio</title>
-    <link rel="icon" href="img/Me.png" type="image/x-icon">
+    <link rel="icon" href="../img/Me.png" type="../image/x-icon">
     <!-- Added Google Fonts link for Preahvihear font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,26 +17,26 @@
     <main class="portfolio">
       <div class="div">
         <div class="overlap">
-          <img class="background" src="img/background.png" alt="Background gradient" />
-          <img class="gradient" src="img/gradient-2.png" alt="Decorative gradient" />
-          <img class="img" src="img/gradient-4.png" alt="Decorative gradient" />
-          <img class="gradient-2" src="img/gradient.png" alt="Decorative gradient" />
-          <img class="gradient-3" src="img/gradient 5.png" alt="Decorative gradient" />
-          <img class="gradient-4" src="img/gradient-3.png" alt="Decorative gradient" />
+          <img class="background" src="../img/background.png" alt="Background gradient" />
+          <img class="gradient" src="../img/gradient-2.png" alt="Decorative gradient" />
+          <img class="img" src="../img/gradient-4.png" alt="Decorative gradient" />
+          <img class="gradient-2" src="../img/gradient.png" alt="Decorative gradient" />
+          <img class="gradient-3" src="../img/gradient 5.png" alt="Decorative gradient" />
+          <img class="gradient-4" src="../img/gradient-3.png" alt="Decorative gradient" />
           <section class="div-2" aria-label="Project screenshots">
-            <img class="screenshot" src="img/screenshot-2022-09-30-at-10-49-1.png" alt="Project screenshot" />
-            <img class="screenshot-2" src="img/Portfolio-1.png" alt="Project screenshot" />
-            <img class="screenshot-3" src="img/screenshot-2022-09-20-at-11-44-2.png" alt="Project screenshot" />
+            <img class="screenshot" src="../img/screenshot-2022-09-30-at-10-49-1.png" alt="Project screenshot" />
+            <img class="screenshot-2" src="../img/Portfolio-1.png" alt="Project screenshot" />
+            <img class="screenshot-3" src="../img/screenshot-2022-09-20-at-11-44-2.png" alt="Project screenshot" />
           </section>
           <section class="div-3" aria-label="Additional project screenshots">
-            <img class="screenshot" src="img/screenshot-2022-09-30-at-10-49-1-3.png" alt="Project screenshot" />
+            <img class="screenshot" src="../img/screenshot-2022-09-30-at-10-49-1-3.png" alt="Project screenshot" />
             <div class="overlap-group">
-              <img class="screenshot-4" src="img/im.png" alt="Project screenshot" />
+              <img class="screenshot-4" src="../img/im.png" alt="Project screenshot" />
             </div>
           </section>
           <header class="header-section">
-            <img class="header" src="img/header.png" alt="Header background" />
-            <img class="logo" src="img/logo.png" alt="Hazem Khaled Logo" />
+            <img class="header" src="../img/header.png" alt="Header background" />
+            <img class="logo" src="../img/logo.png" alt="Hazem Khaled Logo" />
             <nav class="navigation" role="navigation" aria-label="Main navigation">
               <a href="#home" class="text-wrapper">Home</a>
               <a href="#about" class="text-wrapper-2">About</a>
@@ -60,9 +60,9 @@
                 <span class="text-wrapper-9">Hazem Khaled</span>
               </p>
               <div class="arrow" aria-hidden="true">
-                <img class="vector" src="img/vector.png" alt="" />
+                <img class="vector" src="../img/vector.png" alt="" />
               </div>
-              <img class="ellipse" src="img/ellipse 5.png" alt="Decorative ellipse" />
+              <img class="ellipse" src="../img/ellipse 5.png" alt="Decorative ellipse" />
             </div>
           </section>
           <section class="about-section" aria-labelledby="about-heading">
@@ -78,13 +78,13 @@
                 >
                 <!-- Made Instagram logo and text clickable with link -->
                 <a href="https://www.instagram.com/_hazemk" target="_blank" class="instagram-link">
-                  <img src="img/instagram.png" alt="Instagram" class="instagram-logo">
+                  <img src="../img/instagram.png" alt="Instagram" class="instagram-logo">
                   <span class="text-wrapper-12">Instagram</span>
                 </a>
               </p>
             </div>
             <figure class="me">
-              <img class="image" src="img/Me.png" alt="Hazem Khaled profile photo" />
+              <img class="image" src="../img/Me.png" alt="Hazem Khaled profile photo" />
             </figure>
           </section>
           <section class="experience-section" aria-labelledby="experience-heading">
@@ -92,7 +92,7 @@
             <article class="experience">
               <div class="overlap-2">
                 <div class="rectangle" aria-hidden="true"></div>
-                <img class="mask-group" src="img/mask-group-3.png" alt="Web development illustration" />
+                <img class="mask-group" src="../img/mask-group-3.png" alt="Web development illustration" />
                 <h3 class="text-wrapper-13">Web Developer</h3>
                 <p class="building-interactive">
                   Building interactive websites and dashboards using React &amp; Next.js.
@@ -102,13 +102,13 @@
 <a href="projects.html" class="text-wrapper-14">View Projects</a>
                   </div>
                 </div>
-                <img class="group" src="img/group 2.png" alt="Technology icons" />
+                <img class="group" src="../img/group 2.png" alt="Technology icons" />
               </div>
             </article>
             <article class="experience-3">
               <div class="overlap-2">
                 <div class="rectangle-5" aria-hidden="true"></div>
-                <img class="mask-group" src="img/mask-group-3.png" alt="Hardware specialist illustration" />
+                <img class="mask-group" src="../img/mask-group-3.png" alt="Hardware specialist illustration" />
                 <h3 class="text-wrapper-20">Hardware Specialist</h3>
                 <p class="text-wrapper-21">
                   Skilled in assembling, disassembling, and upgrading PCs with optimized performance builds.
@@ -118,12 +118,12 @@
 <a href="projects.html" class="text-wrapper-14">Learn More</a>
                   </div>
                 </div>
-                <img class="group-3" src="img/group 1935.png" alt="Hardware icons" />
+                <img class="group-3" src="../img/group 1935.png" alt="Hardware icons" />
               </div>
             </article>
             <article class="overlap-wrapper">
               <div class="overlap-3">
-                <img class="mask-group" src="img/mask-group-3.png" alt="Kali Linux illustration" />
+                <img class="mask-group" src="../img/mask-group-3.png" alt="Kali Linux illustration" />
                 <div class="rectangle-2" aria-hidden="true"></div>
                 <div class="rectangle-3" aria-hidden="true"></div>
                 <h3 class="text-wrapper-15">Kali Linux User</h3>
@@ -135,12 +135,12 @@
 <a href="projects.html" class="text-wrapper-14">Learn More</a>
                   </div>
                 </div>
-                <img class="group-2" src="img/group 1938.png" alt="Security icons" />
+                <img class="group-2" src="../img/group 1938.png" alt="Security icons" />
               </div>
             </article>
             <article class="experience-2">
               <div class="overlap-3">
-                <img class="mask-group" src="img/mask-group-3.png" alt="Multi-stack coding illustration" />
+                <img class="mask-group" src="../img/mask-group-3.png" alt="Multi-stack coding illustration" />
                 <div class="rectangle-2" aria-hidden="true"></div>
                 <div class="rectangle-4" aria-hidden="true"></div>
                 <h3 class="text-wrapper-17">Multi-Stack Coder</h3>
@@ -153,7 +153,7 @@
 <a href="projects.html" class="text-wrapper-14">View Projects</a>
                   </div>
                 </div>
-                <img class="icons" src="img/icons.png" alt="Programming language icons" />
+                <img class="icons" src="../img/icons.png" alt="Programming language icons" />
               </div>
             </article>
           </section>
@@ -162,7 +162,7 @@
         <section class="coding-skills-section" aria-labelledby="skills-heading">
             <div class="skills-card">
               <div class="skills-header">
-                <img class="skills-icon" src="img/dev.png" alt="Coding skills icon" />
+                <img class="skills-icon" src="../img/dev.png" alt="Coding skills icon" />
                 <h2 class="skills-title" id="skills-heading">Programming Language</h2>
               </div>
               <div class="skills-list">
@@ -197,7 +197,7 @@
           <section class="coding-skills-section-2" aria-labelledby="skills-heading-2">
             <div class="skills-card">
               <div class="skills-header">
-                <img class="skills-icon" src="img/dev.png" alt="Backend skills icon" />
+                <img class="skills-icon" src="../img/dev.png" alt="Backend skills icon" />
                 <h2 class="skills-title" id="skills-heading-2">Frontend Development</h2>
               </div>
               <div class="skills-list">
@@ -232,7 +232,7 @@
           <section class="coding-skills-section-4" aria-labelledby="skills-heading-4">
             <div class="skills-card">
               <div class="skills-header">
-                <img class="skills-icon" src="img/dev.png" alt="Security skills icon" />
+                <img class="skills-icon" src="../img/dev.png" alt="Security skills icon" />
                 <h2 class="skills-title" id="skills-heading-4">Specialized Skills</h2>
               </div>
               <div class="skills-list">
@@ -262,7 +262,7 @@
               <div class="div-4">
                 <img
                   class="screenshot"
-                  src="img/Skills.png"
+                  src="../img/Skills.png"
                   alt="Skills demonstration screenshot"
                 />
               </div>
@@ -270,7 +270,7 @@
           </section>
           <section class="portfolio-section" aria-labelledby="portfolio-heading">
             <div class="project-card">
-              <img class="card" src="img/card-2.png" alt="Solar Explorer Project preview" />
+              <img class="card" src="../img/card-2.png" alt="Solar Explorer Project preview" />
               <article class="portfolio-text">
                 <div class="overlap-4">
                   <div class="featured-project">Featured&nbsp;&nbsp;Project</div>
@@ -302,12 +302,12 @@
             </div>
             <div class="project-links">
               <div class="img-wrapper">
-                <img class="icon-park-solid" src="img/nigga.svg" alt="External link" />
+                <img class="icon-park-solid" src="../img/nigga.svg" alt="External link" />
               </div>
-              <img class="icon-park-solid-3" src="img/image.svg" alt="GitHub link" />
+              <img class="icon-park-solid-3" src="../img/image.svg" alt="GitHub link" />
             </div>
           </article>
-          <img class="image-2" src="img/image-2.png" alt="Virtual Assistant Project preview" />
+          <img class="image-2" src="../img/image-2.png" alt="Virtual Assistant Project preview" />
           <footer class="contact-section" aria-labelledby="contact-heading">
             <h2 class="text-wrapper-10" id="contact-heading">Contact</h2>
             <p class="i-m-currently">
@@ -317,10 +317,10 @@
             </p>
             <div class="social-icons" role="list" aria-label="Social media links">
               <a href="https://discord.com/users/963883934926663701" aria-label="LinkedIn profile" role="listitem">
-                <img class="vector-4" src="img/discord.png" alt="LinkedIn" />
+                <img class="vector-4" src="../img/discord.png" alt="LinkedIn" />
               </a>
               <a href="https://github.com/HazemYoriichi" aria-label="GitHub profile" role="listitem">
-                <img class="vector-2" src="img/github.png" alt="GitHub" />
+                <img class="vector-2" src="../img/github.png" alt="GitHub" />
               </a>
 
             </div>
