--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
     <main class="portfolio">
       <div class="div">
         <div class="overlap">
-          <img class="background" src="../img/background.png" alt="Background gradient" />
-          <img class="gradient" src="../img/gradient-2.png" alt="Decorative gradient" />
+<img class="background" 
+     src="https://raw.githubusercontent.com/HazemYoriichi/portfolio/c293c6a36c16c2ba3e971f11bd2b2e318cdd2801/img/Background.png" 
+     alt="Background gradient" />
+          <img class="gradient" src="https://raw.githubusercontent.com/HazemYoriichi/portfolio/c293c6a36c16c2ba3e971f11bd2b2e318cdd2801/img/Gradient-2.png" alt="Decorative gradient" />
           <img class="img" src="../img/gradient-4.png" alt="Decorative gradient" />
           <img class="gradient-2" src="../img/gradient.png" alt="Decorative gradient" />
           <img class="gradient-3" src="../img/gradient 5.png" alt="Decorative gradient" />
