--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="description" content="Hazem Khaled - Code Architect and Full-Stack Developer Portfolio" />
     <title>Hazem Khaled - Portfolio</title>
-    <link rel="icon" href="../img/Me.png" type="../image/x-icon">
+    <link rel="icon" href="https://raw.githubusercontent.com/HazemYoriichi/portfolio/a9be38ea7cb2ec94c36f3a8df98fae8de55f669f/img/Me.png" type="../image/x-icon">
     <!-- Added Google Fonts link for Preahvihear font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,24 +21,24 @@
      src="https://raw.githubusercontent.com/HazemYoriichi/portfolio/c293c6a36c16c2ba3e971f11bd2b2e318cdd2801/img/Background.png" 
      alt="Background gradient" />
           <img class="gradient" src="https://raw.githubusercontent.com/HazemYoriichi/portfolio/c293c6a36c16c2ba3e971f11bd2b2e318cdd2801/img/Gradient-2.png" alt="Decorative gradient" />
-          <img class="img" src="../img/gradient-4.png" alt="Decorative gradient" />
-          <img class="gradient-2" src="../img/gradient.png" alt="Decorative gradient" />
-          <img class="gradient-3" src="../img/gradient 5.png" alt="Decorative gradient" />
-          <img class="gradient-4" src="../img/gradient-3.png" alt="Decorative gradient" />
+          <img class="img" src="https://raw.githubusercontent.com/HazemYoriichi/portfolio/a9be38ea7cb2ec94c36f3a8df98fae8de55f669f/img/Gradient-4.png" alt="Decorative gradient" />
+          <img class="gradient-2" src="https://raw.githubusercontent.com/HazemYoriichi/portfolio/a9be38ea7cb2ec94c36f3a8df98fae8de55f669f/img/Gradient.png" alt="Decorative gradient" />
+          <img class="gradient-3" src="https://raw.githubusercontent.com/HazemYoriichi/portfolio/a9be38ea7cb2ec94c36f3a8df98fae8de55f669f/img/gradient%205.png" alt="Decorative gradient" />
+          <img class="gradient-4" src="https://raw.githubusercontent.com/HazemYoriichi/portfolio/a9be38ea7cb2ec94c36f3a8df98fae8de55f669f/img/Gradient-3.png" alt="Decorative gradient" />
           <section class="div-2" aria-label="Project screenshots">
-            <img class="screenshot" src="../img/screenshot-2022-09-30-at-10-49-1.png" alt="Project screenshot" />
-            <img class="screenshot-2" src="../img/Portfolio-1.png" alt="Project screenshot" />
+            <img class="screenshot" src="https://raw.githubusercontent.com/HazemYoriichi/portfolio/main/img/screenshot-2022-09-30-at-10-49-1.png" alt="Project screenshot" />
+            <img class="screenshot-2" src="https://raw.githubusercontent.com/HazemYoriichi/portfolio/a9be38ea7cb2ec94c36f3a8df98fae8de55f669f/img/Portfolio-1.png" alt="Project screenshot" />
             <img class="screenshot-3" src="../img/screenshot-2022-09-20-at-11-44-2.png" alt="Project screenshot" />
           </section>
           <section class="div-3" aria-label="Additional project screenshots">
             <img class="screenshot" src="../img/screenshot-2022-09-30-at-10-49-1-3.png" alt="Project screenshot" />
             <div class="overlap-group">
-              <img class="screenshot-4" src="../img/im.png" alt="Project screenshot" />
+              <img class="screenshot-4" src="https://raw.githubusercontent.com/HazemYoriichi/portfolio/a9be38ea7cb2ec94c36f3a8df98fae8de55f669f/img/im.png" alt="Project screenshot" />
             </div>
           </section>
           <header class="header-section">
-            <img class="header" src="../img/header.png" alt="Header background" />
-            <img class="logo" src="../img/logo.png" alt="Hazem Khaled Logo" />
+            <img class="header" src="https://raw.githubusercontent.com/HazemYoriichi/portfolio/a9be38ea7cb2ec94c36f3a8df98fae8de55f669f/img/Header.png" alt="Header background" />
+            <img class="logo" src="https://raw.githubusercontent.com/HazemYoriichi/portfolio/a9be38ea7cb2ec94c36f3a8df98fae8de55f669f/img/Logo.png" alt="Hazem Khaled Logo" />
             <nav class="navigation" role="navigation" aria-label="Main navigation">
               <a href="#home" class="text-wrapper">Home</a>
               <a href="#about" class="text-wrapper-2">About</a>
@@ -62,9 +62,9 @@
                 <span class="text-wrapper-9">Hazem Khaled</span>
               </p>
               <div class="arrow" aria-hidden="true">
-                <img class="vector" src="../img/vector.png" alt="" />
+                <img class="vector" src="https://raw.githubusercontent.com/HazemYoriichi/portfolio/a9be38ea7cb2ec94c36f3a8df98fae8de55f669f/img/Vector.png" alt="" />
               </div>
-              <img class="ellipse" src="../img/ellipse 5.png" alt="Decorative ellipse" />
+              <img class="ellipse" src="https://raw.githubusercontent.com/HazemYoriichi/portfolio/a9be38ea7cb2ec94c36f3a8df98fae8de55f669f/img/Ellipse%205.png" alt="Decorative ellipse" />
             </div>
           </section>
           <section class="about-section" aria-labelledby="about-heading">
@@ -80,13 +80,13 @@
                 >
                 <!-- Made Instagram logo and text clickable with link -->
                 <a href="https://www.instagram.com/_hazemk" target="_blank" class="instagram-link">
-                  <img src="../img/instagram.png" alt="Instagram" class="instagram-logo">
+                  <img src="https://raw.githubusercontent.com/HazemYoriichi/portfolio/a9be38ea7cb2ec94c36f3a8df98fae8de55f669f/img/instagram.png" alt="Instagram" class="instagram-logo">
                   <span class="text-wrapper-12">Instagram</span>
                 </a>
               </p>
             </div>
             <figure class="me">
-              <img class="image" src="../img/Me.png" alt="Hazem Khaled profile photo" />
+              <img class="image" src="https://raw.githubusercontent.com/HazemYoriichi/portfolio/a9be38ea7cb2ec94c36f3a8df98fae8de55f669f/img/Me.png" alt="Hazem Khaled profile photo" />
             </figure>
           </section>
           <section class="experience-section" aria-labelledby="experience-heading">
@@ -94,7 +94,7 @@
             <article class="experience">
               <div class="overlap-2">
                 <div class="rectangle" aria-hidden="true"></div>
-                <img class="mask-group" src="../img/mask-group-3.png" alt="Web development illustration" />
+                <img class="mask-group" src="https://raw.githubusercontent.com/HazemYoriichi/portfolio/main/img/mask-group-3.png" alt="Web development illustration" />
                 <h3 class="text-wrapper-13">Web Developer</h3>
                 <p class="building-interactive">
                   Building interactive websites and dashboards using React &amp; Next.js.
@@ -104,13 +104,13 @@
 <a href="projects.html" class="text-wrapper-14">View Projects</a>
                   </div>
                 </div>
-                <img class="group" src="../img/group 2.png" alt="Technology icons" />
+                <img class="group" src="https://raw.githubusercontent.com/HazemYoriichi/portfolio/a9be38ea7cb2ec94c36f3a8df98fae8de55f669f/img/Group%202.png" alt="Technology icons" />
               </div>
             </article>
             <article class="experience-3">
               <div class="overlap-2">
                 <div class="rectangle-5" aria-hidden="true"></div>
-                <img class="mask-group" src="../img/mask-group-3.png" alt="Hardware specialist illustration" />
+                <img class="mask-group" src="https://raw.githubusercontent.com/HazemYoriichi/portfolio/a9be38ea7cb2ec94c36f3a8df98fae8de55f669f/img/mask-group-3.png" alt="Hardware specialist illustration" />
                 <h3 class="text-wrapper-20">Hardware Specialist</h3>
                 <p class="text-wrapper-21">
                   Skilled in assembling, disassembling, and upgrading PCs with optimized performance builds.
