--- a/index.html
+++ b/index.html
@@ -120,12 +120,12 @@
 <a href="projects.html" class="text-wrapper-14">Learn More</a>
                   </div>
                 </div>
-                <img class="group-3" src="../img/group 1935.png" alt="Hardware icons" />
+                <img class="group-3" src="https://raw.githubusercontent.com/HazemYoriichi/portfolio/d2076a6a1ee0c78b3746de11f0c50440643ddc23/img/Group%201935.png" alt="Hardware icons" />
               </div>
             </article>
             <article class="overlap-wrapper">
               <div class="overlap-3">
-                <img class="mask-group" src="../img/mask-group-3.png" alt="Kali Linux illustration" />
+                <img class="mask-group" src="https://raw.githubusercontent.com/HazemYoriichi/portfolio/a9be38ea7cb2ec94c36f3a8df98fae8de55f669f/img/mask-group-3.png" alt="Kali Linux illustration" />
                 <div class="rectangle-2" aria-hidden="true"></div>
                 <div class="rectangle-3" aria-hidden="true"></div>
                 <h3 class="text-wrapper-15">Kali Linux User</h3>
@@ -137,12 +137,12 @@
 <a href="projects.html" class="text-wrapper-14">Learn More</a>
                   </div>
                 </div>
-                <img class="group-2" src="../img/group 1938.png" alt="Security icons" />
+                <img class="group-2" src="https://raw.githubusercontent.com/HazemYoriichi/portfolio/d2076a6a1ee0c78b3746de11f0c50440643ddc23/img/Group%201938.png" alt="Security icons" />
               </div>
             </article>
             <article class="experience-2">
               <div class="overlap-3">
-                <img class="mask-group" src="../img/mask-group-3.png" alt="Multi-stack coding illustration" />
+                <img class="mask-group" src="https://raw.githubusercontent.com/HazemYoriichi/portfolio/a9be38ea7cb2ec94c36f3a8df98fae8de55f669f/img/mask-group-3.png" alt="Multi-stack coding illustration" />
                 <div class="rectangle-2" aria-hidden="true"></div>
                 <div class="rectangle-4" aria-hidden="true"></div>
                 <h3 class="text-wrapper-17">Multi-Stack Coder</h3>
@@ -155,7 +155,7 @@
 <a href="projects.html" class="text-wrapper-14">View Projects</a>
                   </div>
                 </div>
-                <img class="icons" src="../img/icons.png" alt="Programming language icons" />
+                <img class="icons" src="https://raw.githubusercontent.com/HazemYoriichi/portfolio/d2076a6a1ee0c78b3746de11f0c50440643ddc23/img/Icons.png" alt="Programming language icons" />
               </div>
             </article>
           </section>
@@ -164,7 +164,7 @@
         <section class="coding-skills-section" aria-labelledby="skills-heading">
             <div class="skills-card">
               <div class="skills-header">
-                <img class="skills-icon" src="../img/dev.png" alt="Coding skills icon" />
+                <img class="skills-icon" src="https://raw.githubusercontent.com/HazemYoriichi/portfolio/d2076a6a1ee0c78b3746de11f0c50440643ddc23/img/dev.png" alt="Coding skills icon" />
                 <h2 class="skills-title" id="skills-heading">Programming Language</h2>
               </div>
               <div class="skills-list">
@@ -199,7 +199,7 @@
           <section class="coding-skills-section-2" aria-labelledby="skills-heading-2">
             <div class="skills-card">
               <div class="skills-header">
-                <img class="skills-icon" src="../img/dev.png" alt="Backend skills icon" />
+                <img class="skills-icon" src="https://raw.githubusercontent.com/HazemYoriichi/portfolio/d2076a6a1ee0c78b3746de11f0c50440643ddc23/img/dev.png" alt="Backend skills icon" />
                 <h2 class="skills-title" id="skills-heading-2">Frontend Development</h2>
               </div>
               <div class="skills-list">
@@ -234,7 +234,7 @@
           <section class="coding-skills-section-4" aria-labelledby="skills-heading-4">
             <div class="skills-card">
               <div class="skills-header">
-                <img class="skills-icon" src="../img/dev.png" alt="Security skills icon" />
+                <img class="skills-icon" src="https://raw.githubusercontent.com/HazemYoriichi/portfolio/d2076a6a1ee0c78b3746de11f0c50440643ddc23/img/dev.png" alt="Security skills icon" />
                 <h2 class="skills-title" id="skills-heading-4">Specialized Skills</h2>
               </div>
               <div class="skills-list">
@@ -272,7 +272,7 @@
           </section>
           <section class="portfolio-section" aria-labelledby="portfolio-heading">
             <div class="project-card">
-              <img class="card" src="../img/card-2.png" alt="Solar Explorer Project preview" />
+              <img class="card" src="https://raw.githubusercontent.com/HazemYoriichi/portfolio/d2076a6a1ee0c78b3746de11f0c50440643ddc23/img/card-2.png" alt="Solar Explorer Project preview" />
               <article class="portfolio-text">
                 <div class="overlap-4">
                   <div class="featured-project">Featured&nbsp;&nbsp;Project</div>
@@ -304,12 +304,12 @@
             </div>
             <div class="project-links">
               <div class="img-wrapper">
-                <img class="icon-park-solid" src="../img/nigga.svg" alt="External link" />
+                <img class="icon-park-solid" src="https://raw.githubusercontent.com/HazemYoriichi/portfolio/d2076a6a1ee0c78b3746de11f0c50440643ddc23/img/nigga.svg" alt="External link" />
               </div>
               <img class="icon-park-solid-3" src="../img/image.svg" alt="GitHub link" />
             </div>
           </article>
-          <img class="image-2" src="../img/image-2.png" alt="Virtual Assistant Project preview" />
+          <img class="image-2" src="https://raw.githubusercontent.com/HazemYoriichi/portfolio/d2076a6a1ee0c78b3746de11f0c50440643ddc23/img/image-2.png" alt="Virtual Assistant Project preview" />
           <footer class="contact-section" aria-labelledby="contact-heading">
             <h2 class="text-wrapper-10" id="contact-heading">Contact</h2>
             <p class="i-m-currently">
@@ -319,10 +319,10 @@
             </p>
             <div class="social-icons" role="list" aria-label="Social media links">
               <a href="https://discord.com/users/963883934926663701" aria-label="LinkedIn profile" role="listitem">
-                <img class="vector-4" src="../img/discord.png" alt="LinkedIn" />
+                <img class="vector-4" src="https://raw.githubusercontent.com/HazemYoriichi/portfolio/d2076a6a1ee0c78b3746de11f0c50440643ddc23/img/discord.png" alt="LinkedIn" />
               </a>
               <a href="https://github.com/HazemYoriichi" aria-label="GitHub profile" role="listitem">
-                <img class="vector-2" src="../img/github.png" alt="GitHub" />
+                <img class="vector-2" src="https://raw.githubusercontent.com/HazemYoriichi/portfolio/d2076a6a1ee0c78b3746de11f0c50440643ddc23/img/github.png" alt="GitHub" />
               </a>
 
             </div>
