--- a/index.html
+++ b/index.html
@@ -331,5 +331,60 @@
         </div>
       </div>
     </main>
+    <script>
+  // منع الكليك يمين
+  document.addEventListener("contextmenu", function(e) {
+    e.preventDefault();
+  });
+
+  // منع النسخ واللصق
+  document.addEventListener("copy", function(e) {
+    e.preventDefault();
+  });
+  document.addEventListener("cut", function(e) {
+    e.preventDefault();
+  });
+  document.addEventListener("paste", function(e) {
+    e.preventDefault();
+  });
+
+  // منع اختصارات فتح أدوات المطور
+  document.onkeydown = function(e) {
+    if (e.keyCode == 123) { // F12
+      return false;
+    }
+    if (e.ctrlKey && e.shiftKey && (e.keyCode == 73 || e.keyCode == 74)) {
+      // Ctrl+Shift+I (Inspect) أو Ctrl+Shift+J (Console)
+      return false;
+    }
+    if (e.ctrlKey && e.keyCode == 85) {
+      // Ctrl+U (عرض الكود)
+      return false;
+    }
+  };
+    </script>
+    <style>
+  /* منع التحديد والنسخ */
+  body {
+    -webkit-user-select: none; /* Safari */
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* IE10+/Edge */
+    user-select: none; /* Standard */
+  }
+</style>
+<style>
+  img {
+    pointer-events: none; /* يمنع السحب أو التحديد */
+  }
+</style>
+
+<script>
+  document.addEventListener("contextmenu", function(e) {
+    if (e.target.tagName === "IMG") {
+      e.preventDefault();
+    }
+  });
+</script>
+
   </body>
 </html>
