--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
             <h1 class="i-m-a-code-architect" id="hero-heading">I'm a Code Architect.</h1>
             <div class="hero-content">
               <p class="judges-a-book-by-its">
-<span class="span">Judges a book<br /></span>
-<span class="text-wrapper-4"> by its cover</span>
-<span class="span">...</span>
+<span class="span">Judges by its<br /></span>
+<span class="text-wrapper-4">a book cover</span>
+
 
 
               </p>
